# scrutiny

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Dockerfile  README.md
Testing/Temporary/: CTestCostData.txt
include/: scrutiny.h
include/scrutiny/assert/: assert_failure.h  bool.h  eq.h  numeric.h  optional.h  pointer.h  public.h  str.h  vector.h
include/scrutiny/io/: cli_out.h  cli_out_impl.h
include/scrutiny/runner/: public.h  test.h  test_factory.h  test_failure.h  test_name_factory.h  test_reporter.h  test_reporter_message.h  test_state.h  test_state_message.h  test_suite.h
src/assert/: assert_failure_assert.cpp  bool.cpp  numeric.cpp  pointer.cpp  str.cpp
src/io/: cli_out_impl.cpp
src/runner/: test.cpp  test_factory.cpp  test_failure.cpp  test_name_factory.cpp  test_reporter.cpp  test_reporter_message.cpp  test_state.cpp  test_state_message.cpp  test_suite.cpp
test/: main.cpp
test/_assert/: assert_failure_assert.h  test_failure_assert.h
test/_mocks/io/: cli_out_mock.cpp  cli_out_mock.h
test/scrutiny/assert/: assert_failure_test.cpp  assert_failure_test.h  bool_test.cpp  bool_test.h  eq_test.cpp  eq_test.h  numeric_test.cpp  numeric_test.h  optional_test.cpp  optional_test.h  str_test.cpp  str_test.h  vector_test.cpp  vector_test.h
test/scrutiny/runner/: test_factory_test.cpp  test_factory_test.h  test_failure_test.cpp  test_failure_test.h  test_name_factory_test.cpp  test_name_factory_test.h  test_reporter_test.cpp  test_reporter_test.h  test_suite_test.cpp  test_suite_test.h  test_test.cpp  test_test.h
